[gd_scene load_steps=2 format=3 uid="uid://b2kb7x4y8p15d"]

[ext_resource type="Script" uid="uid://bwtw2mo5hucmy" path="res://GameSystem/InventoryUI/InventoryUI.gd" id="1_r3k5j"]

[node name="InventoryUI" type="CanvasLayer"]
script = ExtResource("1_r3k5j")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="Container" type="MarginContainer" parent="UI/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Background/Container"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="WeaponList" type="Panel" parent="UI/Background/Container/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Background/Container/HBoxContainer/WeaponList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Background/Container/HBoxContainer/WeaponList/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="UI/Background/Container/HBoxContainer/WeaponList/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Weapons"
horizontal_alignment = 1

[node name="WeaponItemList" type="ItemList" parent="UI/Background/Container/HBoxContainer/WeaponList/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true
auto_height = true

[node name="WeaponInfo" type="Panel" parent="UI/Background/Container/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Background/Container/HBoxContainer/WeaponInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Background/Container/HBoxContainer/WeaponInfo/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="UI/Background/Container/HBoxContainer/WeaponInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Selected Weapon"
horizontal_alignment = 1

[node name="WeaponIcon" type="TextureRect" parent="UI/Background/Container/HBoxContainer/WeaponInfo/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="WeaponName" type="Label" parent="UI/Background/Container/HBoxContainer/WeaponInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="StatsPanel" type="Panel" parent="UI/Background/Container/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Background/Container/HBoxContainer/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Background/Container/HBoxContainer/StatsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="UI/Background/Container/HBoxContainer/StatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stats Changes"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="UI/Background/Container/HBoxContainer/StatsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
